<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/green"
    >

    <TextView
        android:id="@+id/text"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/text"
        android:background="@drawable/avatar"
        android:contentDescription="@string/arrow"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowRadius="5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:srcCompat="@drawable/rectangle_6" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/alarmbutton" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="211dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/cb" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="280dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/sb" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/listbutton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="583dp"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="530dp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:shadowColor="@color/black"
        android:shadowRadius="5"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="477dp"
        android:text="@string/settingSound"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:shadowColor="@color/black"
        android:shadowRadius="5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="425dp"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:shadowColor="@color/black"
        android:shadowRadius="5"/>

</RelativeLayout>